Add a "continue" between "break" and "fred-reverse-watch".
Following the steps in README, I get a number of fred_asserts and the
reverse-watch fails. It turns out that a "continue" is needed so that
FReD has a starting point (main) and an end point (br 30).

--- a/README
+++ b/README
@@ -19,6 +19,7 @@ To set this up, you'll want to do several things.
     (gdb) run
     (gdb) fred-ckpt
     (gdb) break 30
+    (gdb) continue
     (gdb) fred-reverse-watch list_len(head)<17
     (gdb) where
     (gdb) list
